--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "@vue/cli-plugin-eslint": "^3.0.4",
         "@vue/cli-service": "^3.0.4",
         "@vue/eslint-config-airbnb": "^3.0.4",
+        "css-loader": "^4.3.0",
         "sass": "^1.82.0",
-        "sass-loader": "^10.1.1",
+        "sass-loader": "^10.5.2",
+        "style-loader": "^1.3.0",
         "vue-template-compiler": "^2.5.17",
         "webpack": "^4.47.0"
     }
